<resources>
    <string name="app_name">Week10</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="new_forum">New Forum</string>
    <string name="forum_title">Forum Title</string>
    <string name="forum_description">Forum Description</string>
    <string name="forums">Forums</string>
</resources>